kube/lab5deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-db
  template:
    metadata:
      labels:
        app: auth-service-db
    spec:
      containers:
        - name: auth-service-db
          image: yourhubusername/coe692-lab5:auth-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-app
  template:
    metadata:
      labels:
        app: auth-service-app
    spec:
      containers:
        - name: auth-service-app
          image: yourhubusername/coe692-lab5:auth-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service-db
  template:
    metadata:
      labels:
        app: catalog-service-db
    spec:
      containers:
        - name: catalog-service-db
          image: yourhubusername/coe692-lab5:catalog-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service-app
  template:
    metadata:
      labels:
        app: catalog-service-app
    spec:
      containers:
        - name: catalog-service-app
          image: yourhubusername/coe692-lab5:catalog-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-db
  template:
    metadata:
      labels:
        app: inventory-service-db
    spec:
      containers:
        - name: inventory-service-db
          image: yourhubusername/coe692-lab5:inventory-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-app
  template:
    metadata:
      labels:
        app: inventory-service-app
    spec:
      containers:
        - name: inventory-service-app
          image: yourhubusername/coe692-lab5:inventory-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service-db
  template:
    metadata:
      labels:
        app: reservation-service-db
    spec:
      containers:
        - name: reservation-service-db
          image: yourhubusername/coe692-lab5:reservation-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service-app
  template:
    metadata:
      labels:
        app: reservation-service-app
    spec:
      containers:
        - name: reservation-service-app
          image: yourhubusername/coe692-lab5:reservation-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-penalty-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-penalty-service-db
  template:
    metadata:
      labels:
        app: checkout-penalty-service-db
    spec:
      containers:
        - name: checkout-penalty-service-db
          image: yourhubusername/coe692-lab5:checkout-penalty-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-penalty-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-penalty-service-app
  template:
    metadata:
      labels:
        app: checkout-penalty-service-app
    spec:
      containers:
        - name: checkout-penalty-service-app
          image: yourhubusername/coe692-lab5:checkout-penalty-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service-db
  template:
    metadata:
      labels:
        app: frontend-service-db
    spec:
      containers:
        - name: frontend-service-db
          image: yourhubusername/coe692-lab5:frontend-service-db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service-app
  template:
    metadata:
      labels:
        app: frontend-service-app
    spec:
      containers:
        - name: frontend-service-app
          image: yourhubusername/coe692-lab5:frontend-service-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
