kube/lab5service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-db
spec:
  selector:
    app: auth-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-app
spec:
  selector:
    app: auth-service-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service-db
spec:
  selector:
    app: catalog-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service-app
spec:
  selector:
    app: catalog-service-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-db
spec:
  selector:
    app: inventory-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-app
spec:
  selector:
    app: inventory-service-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service-db
spec:
  selector:
    app: reservation-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service-app
spec:
  selector:
    app: reservation-service-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-penalty-service-db
spec:
  selector:
    app: checkout-penalty-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-penalty-service-app
spec:
  selector:
    app: checkout-penalty-service-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-db
spec:
  selector:
    app: frontend-service-db
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-app
  annotations:
    beta.cloud.google.com/backend-config: '{"default":"frontend-backendconfig"}'
spec:
  selector:
    app: frontend-service-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8081
