kube/lab5ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab5-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /auth-service
            pathType: Prefix
            backend:
              service:
                name: auth-service-app
                port:
                  number: 8080
          - path: /catalog-service
            pathType: Prefix
            backend:
              service:
                name: catalog-service-app
                port:
                  number: 8080
          - path: /inventory-service
            pathType: Prefix
            backend:
              service:
                name: inventory-service-app
                port:
                  number: 8080
          - path: /reservation-service
            pathType: Prefix
            backend:
              service:
                name: reservation-service-app
                port:
                  number: 8080
          - path: /checkout-penalty-service
            pathType: Prefix
            backend:
              service:
                name: checkout-penalty-service-app
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-app
                port:
                  number: 8080
